force-app/main/default/objects/Rev_Covamo_Detail__c/Rev_Covamo_Detail__c.object-meta.xml
<CustomObject>
    <label>Covamo Detail</label>
    <nameField>
        <displayFormat>Cov Detail - {0000}</displayFormat>
        <label>Covamo Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Covamo Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>