force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Additives__c.field-meta.xml
<CustomField>
    <fullName>Additives__c</fullName>
    <label>Additives</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>