force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Amortization_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Per_Unit__c</fullName>
    <label>Amortization Per Unit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>