force-app/main/default/objects/Rev_Covamo_Detail__c/fields/BDF__c.field-meta.xml
<CustomField>
    <fullName>BDF__c</fullName>
    <label>BDF</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>