force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Biofuel__c.field-meta.xml
<CustomField>
    <fullName>Biofuel__c</fullName>
    <label>Biofuel</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>