force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Breakbulk_Cost__c.field-meta.xml
<CustomField>
    <fullName>Breakbulk_Cost__c</fullName>
    <label>Breakbulk Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>