force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Business_Development_Fund__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Fund__c</fullName>
    <label>Business Development Fund</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>