force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Distillation_Premium__c.field-meta.xml
<CustomField>
    <fullName>Distillation_Premium__c</fullName>
    <label>Distillation Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>