force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Excise_Fee__c.field-meta.xml
<CustomField>
    <fullName>Excise_Fee__c</fullName>
    <label>Excise Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>