force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Fixed_Premium__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Premium__c</fullName>
    <label>Fixed Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>