force-app/main/default/objects/Rev_Covamo_Detail__c/fields/IS_Deleted__c.field-meta.xml
<CustomField>
    <fullName>IS_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>