force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Market_Premium__c.field-meta.xml
<CustomField>
    <fullName>Market_Premium__c</fullName>
    <label>Market Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>