force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Miscellaneous_Cost__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Cost__c</fullName>
    <label>Miscellaneous Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>