force-app/main/default/objects/Rev_Covamo_Detail__c/fields/MOPS__c.field-meta.xml
<CustomField>
    <fullName>MOPS__c</fullName>
    <label>MOPS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>