force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Oil_Loss__c.field-meta.xml
<CustomField>
    <fullName>Oil_Loss__c</fullName>
    <label>Oil Loss</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>