force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Payables_Days__c.field-meta.xml
<CustomField>
    <fullName>Payables_Days__c</fullName>
    <label>Payables Days</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>