force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Primary_Transport__c.field-meta.xml
<CustomField>
    <fullName>Primary_Transport__c</fullName>
    <label>Primary Transport</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>