force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Purchase_Margin__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Margin__c</fullName>
    <label>Purchase Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>