force-app/main/default/objects/Rev_Covamo_Detail__c/fields/RE_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RE Product</label>
    <referenceTo>RE_Product__c</referenceTo>
    <relationshipLabel>Covamo Details</relationshipLabel>
    <relationshipName>Covamo_Details</relationshipName>
    <type>Lookup</type>
</CustomField>