force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Rev_Covamo_Header__c.field-meta.xml
<CustomField>
    <fullName>Rev_Covamo_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Covamo Header</label>
    <referenceTo>Rev_Covamo_Header__c</referenceTo>
    <relationshipLabel>Covamo Details</relationshipLabel>
    <relationshipName>Covamo_Details</relationshipName>
    <type>Lookup</type>
</CustomField>