force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Secondary_Transport__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Transport__c</fullName>
    <label>Secondary Transport</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>