force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Stocks_Days__c.field-meta.xml
<CustomField>
    <fullName>Stocks_Days__c</fullName>
    <label>Stocks Days</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>