force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Target_Unit_C3__c.field-meta.xml
<CustomField>
    <fullName>Target_Unit_C3__c</fullName>
    <label>Target Unit C3</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>