force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Total_Sales_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Margin__c</fullName>
    <label>Total Sales Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>