force-app/main/default/objects/Rev_Covamo_Detail__c/fields/Transportation_Margin__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Margin__c</fullName>
    <label>Transportation Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>