force-app/main/default/objects/Rev_Covamo_Detail__c/recordTypes/Backstop.recordType-meta.xml
<RecordType>
    <fullName>Backstop</fullName>
    <active>true</active>
    <label>Backstop</label>
</RecordType>