force-app/main/default/objects/Rev_Covamo_Detail__c/listViews/Covamo_Header_Edit_Rev_Covamo_Detail.listView-meta.xml
<ListView>
    <fullName>Covamo_Header_Edit_Rev_Covamo_Detail</fullName>
    <filterScope>Queue</filterScope>
    <label>Covamo Header Edit</label>
    <queue>Covamo_Header_Edit</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>